# devlog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  release.yml  sonarqube.yml
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/src/content/docs/: contributing.md  index.mdx
docs/src/content/docs/getting-started/: installation.md  introduction.md
docs/src/content/docs/guides/: projects.md  usage.md
docs/src/content/docs/reference/: data-storage.md  project-layout.md
src/: cli.rs  data.rs  main.rs  store.rs  style.rs
src/cli/: commands.rs
src/cli/commands/: add.rs  list.rs  set_status.rs
src/data/: entry.rs  project.rs  status.rs
src/store/: result.rs
