[package]
name = "d3vlog"
version = "0.8.1"
edition = "2024"
description = "A tiny developer journal that lives in your terminal"
authors = ["Welt"]
license = "Apache-2.0"
repository = "https://github.com/w3lt/devlog"
readme = "README.md"
keywords = ["cli", "journal", "sqlite", "developer"]
categories = ["command-line-utilities"]

[[bin]]
name = "devlog"
path = "src/main.rs"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.23.3", features = ["v7"] }
